# parlor-room

./: .dockerignore  Cargo.toml  Dockerfile  EXECUTION_PLAN.md  README.md  debug  debug.rs  docker-compose.yml  example-config.toml  flake.nix
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: rating_performance.rs
scripts/: deploy.sh
src/: error.rs  lib.rs  main.rs  types.rs  utils.rs
src/amqp/: connection.rs  handlers.rs  messages.rs  mod.rs  publisher.rs
src/bot/: auth.rs  backfill.rs  mod.rs  provider.rs
src/config/: amqp.rs  app.rs  lobby.rs  mod.rs  rating.rs
src/lobby/: instance.rs  manager.rs  matching.rs  mod.rs  provider.rs
src/metrics/: collector.rs  health.rs  mod.rs
src/rating/: calculator.rs  mod.rs  storage.rs  weng_lin.rs
src/service/: app.rs  health.rs  mod.rs
src/wait_time/: calculator.rs  mod.rs  provider.rs  statistics.rs
tests/: integration_tests.rs  queue_tester.rs
tests/fixtures/: mod.rs
tests/integration/: lobby_lifecycle.rs  mod.rs
tests/load/: concurrent_queuing.rs  mod.rs
